apps/frontend/styles/profile.css
span {
  padding-left: auto;
}

b {
  font-weight: bold;
}

h2 {
  color: var(--color-primary-600);
}

.profile-header {
  margin-top: var(--space-10);
  gap: var(--space-10);
  flex-wrap: wrap;

  .profile-image {
    position: relative;
    width: 190px;
    height: 190px;
  }

  .profile-image::before {
    content: "";
    position: absolute;
    inset: -38px;
    background: var(--color-primary-600);
    clip-path: polygon(
      50% 0%,
      65% 20%,
      100% 25%,
      75% 50%,
      100% 75%,
      65% 80%,
      50% 100%,
      35% 80%,
      0% 75%,
      25% 50%,
      0% 25%,
      35% 20%
    );
    transform: rotate(12deg);
    z-index: -1;
    filter: blur(0.5px);
    opacity: 0.8;
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 23.63px;
    transform: rotate(6.03deg);
    position: relative;
    z-index: 1;
  }

  @media screen and (max-width: 475px) {
    flex-direction: column;
    gap: var(--space-4);
    align-items: center;
  }
}

main {
  /* padding-inline: var(--space-8); */
  max-width: 51rem;
  section {
    margin-top: 4.5rem;
    gap: var(--space-10);
  }

  p {
    padding: var(--space-4) 0;
  }

  .info > p {
    border-bottom: solid 1px;
    border-color: #e7e8e9;

    @media screen and (max-width: 375px) {
      flex-direction: column;
    }
  }
}

.related-links {
  .links {
    display: flex;
    gap: var(--space-4);
    flex-wrap: wrap;
  }

  h2 {
    padding-bottom: var(--space-4);
  }

  a {
    color: black;
    text-decoration: none;
    padding: 2px var(--space-2);
    border: solid 1px transparent;
    background-color: var(--color-bg-300);
    border-radius: var(--radius-lg);
    font-size: var(--font-size-sm);

    &:hover {
      background-color: var(--color-primary-400);
    }
  }
}

